Initial commit: CoinsBot desktop app

--- a/renderer/ui.html
+++ b/renderer/ui.html
@@ -14,10 +14,13 @@
         <button id="btnAuth">Авторизація</button>
 
         <label class="label">URL товару</label>
-        <input id="url" placeholder="Встав URL сторінки товару..." />
+        <input id="url" placeholder="Встав URL сторінки товару" />
+
+        <label class="label">Дата і час старту</label>
+        <input id="startAt" type="datetime-local" />
 
         <div class="row">
-          <button id="btnStart">Почати відстеження</button>
+          <button id="btnArm">Почати відстеження</button>
           <button id="btnStop" class="danger">Зупинити</button>
         </div>
 
